--- a/analysis.rmd
+++ b/analysis.rmd
@@ -9,20 +9,30 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyr)
 library(dplyr)
+library(huxtable)
 ```
 
 ## Import Survey Data
 
+This query is not run when the document is rendered because I didn't want to muck around with ODBC in RStudio.
 ```{}
 select
-    FROM_UNIXTIME(sr.date_created,'%Y-%m') as month,
+    FROM_UNIXTIME(sr.date_created,'%Y-%U') as week,
     z.state_abbrev,
     cn.county_descr,
     cn.fips_code,
-    sum(president_vote_2016 like '%Clinton%' and c.text like '%Biden%') as clinton_biden,
-    sum(president_vote_2016 like '%Trump%' and c.text like '%Trump%') as trump_trump,
-    sum(president_vote_2016 like '%Clinton%' and c.text like '%Trump%') as clinton_trump,
-    sum(president_vote_2016 like '%Trump%' and c.text like '%Biden%') as trump_biden
+    if(c.text like '%Biden%', 1, 0) as biden,
+    if(c.text like '%Trump%', 1, 0) as trump,
+    if(sr.president_vote_2016 like '%Clinton%' and c.text like '%Biden%', 1, 0) as clinton_biden,
+    if(sr.president_vote_2016 like '%Trump%' and c.text like '%Trump%', 1, 0) as trump_trump,
+    if(sr.president_vote_2016 like '%Clinton%' and c.text like '%Trump%', 1, 0) as clinton_trump,
+    if(sr.president_vote_2016 like '%Trump%' and c.text like '%Biden%', 1, 0) as trump_biden,
+    sr.ethnicity,
+    2020 - sr.year_born as age,
+    sr.gender,
+    cn.votes_2016_clinton / cn.votes_2016_all as cn_clinton_pct,
+    cn.votes_2016_trump / cn.votes_2016_all as cn_trump_pct,
+    pop_2017_18plus as cn_pop
 from survey_data.survey_responders sr
     join survey_data.surveys s
         on sr.survey_id = s.id
@@ -32,7 +42,7 @@ from survey_data.survey_responders sr
         on q.id = r.survey_question_id
         and q.heading in (
         'If the election for President were held today, who would you vote for?',
-        'If the 2020 generalt election for President were held today and the candidates were the following, who would you vote for?',
+        'If the 2020 general election for President were held today and the candidates were the following, who would you vote for?',
         'If the election for President were held today and the candidates were the following, who would you vote for?',
         'If the November election for President were held today, who would you vote for?'
         )
@@ -45,32 +55,40 @@ from survey_data.survey_responders sr
         on z.state_abbrev = cn.state_abbrev
         and z.association_id = cn.county_code
 where sr.date_created > UNIX_TIMESTAMP(20191231)
-group by 1, cn.fips_code
-
 ```
-
+We import the output of DataGrip and reformat it.
 
 ```{r survey_data}
-survey <- read.csv("county_counts.csv", header = F)
+survey <- read.csv("respondents.csv", header = F)
 names(survey) <-
   c(
-    "month",
+    "week",
     "state",
     "county",
     "fips",
+    "biden",
+    "trump",
     "clinton_biden",
     "trump_trump",
     "clinton_trump",
-    "trump_biden"
+    "trump_biden",
+    "ethnicity",
+    "age",
+    "gender",
+    "county_clinton",
+    "county_trump",
+    "county_pop"
   )
 ```
 
 ## Importing and Manipulating COVID Data
 
-From the JHU CSSE.
+From the JHU CSSE. We make a long dataset, calculate delta, and collapse by week.
 
 ```{r covid_data}
-covid_wide <- read.csv("time_series_covid19_confirmed_US.csv")
+covid_wide <-
+  read.csv(
+    "https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_US.csv")
 covid_long <- pivot_longer(covid_wide, starts_with("X"), names_to = "date")
 covid_long$date <- as.Date(covid_long$date, format = "X%m.%d.%y")
 covid_long <- covid_long[!is.na(covid_long$FIPS),]
@@ -78,26 +96,53 @@ covid_long <- covid_long[order(covid_long$FIPS, covid_long$date),]
 covid_long[["new_cases"]] <-
   c(0, covid_long$value[-1] - covid_long$value[1:length(covid_long$value) - 1])
 covid_long[covid_long$date == "2020-01-22", "new_cases"] <- 0
-covid_long[["month"]] <- format(covid_long$date, "%Y-%m")
+covid_long[["week"]] <- format(covid_long$date, "%Y-%U")
 covid <-
   covid_long %>% 
-  group_by(FIPS, month) %>% 
+  group_by(FIPS, week) %>% 
   summarize(cases = sum(new_cases), .groups = "keep")
 ```
 
 ## Join Survey and COVID Data
+
+We merge on FIPS code (as an integer) and week, giving us one row per respondent with covid data per respondent's county. 
 ```{r join}
 dta <-
   merge(survey,
         covid,
-        by.x = c("fips", "month"),
-        by.y = c("FIPS", "month"))
-dta <- dta[!dta$month %in% c("2020-01", "2020-10"),]
+        by.x = c("fips", "week"),
+        by.y = c("FIPS", "week"))
+
+dta <- dta[!dta$week %in% c("2020-02", strftime(Sys.Date(), format = "%Y-%U")),]
+dta[["weekn"]] <- as.numeric(substr(dta$week, 6, 7))
+
+write.csv(dta, file = "respondents_covid.csv")
 ```
 
-## Initial Model
-```{r initial_analysis}
-init <- lm(clinton_trump ~ cases, data = dta)
-summary(init)
+## Predicting Trump -> Biden Switchers
+```{r trump_biden}
+tb.m1 <- lm(trump_biden ~ cases, data = dta)
+tb.m2 <- lm(trump_biden ~ cases + weekn, data = dta)
+tb.m3 <-
+  lm(trump_biden ~ cases + weekn + gender + age + ethnicity, data = dta)
+tb.m4 <-
+  lm(trump_biden ~ cases + weekn + gender + age + ethnicity + county_trump,
+     data = dta)
+
+huxreg(tb.m1, tb.m2, tb.m3, tb.m4)
+
 ```
 
+## Predicting Clinton -> Trump Switchers
+```{r clinton_trump}
+ct.m1 <- lm(clinton_trump ~ cases, data = dta)
+ct.m2 <- lm(clinton_trump ~ cases + weekn, data = dta)
+ct.m3 <-
+  lm(clinton_trump ~ cases + weekn + gender + age + ethnicity, data = dta)
+ct.m4 <-
+  lm(clinton_trump ~ cases + weekn + gender + age + ethnicity + county_trump,
+     data = dta)
+
+huxreg(ct.m1, ct.m2, ct.m3, ct.m4)
+
+```
